--- a/BS4_Boon Chu.ipynb
+++ b/BS4_Boon Chu.ipynb
@@ -29,9 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Web Scraping Project**\n",
+        "#**BS4 Web Scraping Project with few lines of coding**\n",
         "\n",
-        "Using simple coding to extract list of information from HTML webpage.\n",
+        "Using simple few lines of coding to extract list of information from HTML webpage.\n",
         "\n",
         "Objectives: To scrap company information (name, description, website) from HTML webpage about the list of 68 Top Indonesia Automotive Companies and Startups of 2021 from the website https://beststartup.asia/68-top-indonesia-automotive-companies-and-startups-of-2021/.\n",
         "\n",
