--- a/BS4_Boon Chu.ipynb
+++ b/BS4_Boon Chu.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**BS4 Web Scraping Project with few lines of coding by Boon Chu**\n",
+        "#**BS4 Web Scraping Project with few lines of coding**\n",
         "\n",
         "Using simple few lines of coding to extract list of information from HTML webpage.\n",
         "\n",
